reverse the config list in parser